<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighter_grey"
    android:padding="@dimen/padding_16"
    tools:context=".ui.forgotPassword.ForgotPasswordActivity">

    <TextView
        android:id="@+id/appName"
        style="@style/h1_title_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/margin_20"
        android:src="@drawable/confusion_icon"
        app:layout_constraintBottom_toTopOf="@id/forgot_pass_main"
        app:layout_constraintTop_toBottomOf="@id/appName" />

    <TextView
        android:id="@+id/forgot_pass_main"
        style="@style/h2_title_bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:gravity="center_horizontal"
        android:text="@string/forgot_pass_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgot_pass_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/forgot_pass_desc"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_pass_main" />

    <EditText
        android:id="@+id/forgot_pass_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_56"
        android:layout_marginTop="@dimen/margin_20"
        android:background="@drawable/round_corners"
        android:drawableStart="@drawable/email_icon"
        android:drawablePadding="@dimen/padding_16"
        android:drawableTint="@color/black"
        android:hint="@string/register_screen_email_hint"
        android:paddingStart="@dimen/margin_20"
        app:layout_constraintTop_toBottomOf="@id/forgot_pass_desc" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/forgot_pass_btn"
        style="@style/yellow_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_20"
        android:text="@string/forgot_pass_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>