<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".ui.dashboard.filters.FiltersFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black"
        android:alpha="0.8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/filter_screen_subheader"/>

    <TextView
        android:id="@+id/filter_screen_header"
        style="@style/h2_title_bold"
        android:textColor="@color/yellow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_10"
        android:text="@string/filter_screen_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/filter_screen_subheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_10"
        android:paddingBottom="@dimen/padding_10"
        android:textColor="@color/white"
        android:text="@string/filter_screen_subtxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_screen_header" />

    <TextView
        android:id="@+id/calories_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_25"
        android:paddingStart="@dimen/padding_10"
        android:text="@string/calories"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_screen_subheader" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/calories_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stepSize="300.0"
        android:valueFrom="0.0"
        android:valueTo="3000.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calories_header" />

    <TextView
        android:id="@+id/meal_type_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_10"
        android:text="@string/meal_type"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calories_slider" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/meal_type_dropdown"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/meal_type"
        android:padding="@dimen/padding_10"
        app:layout_constraintTop_toBottomOf="@id/meal_type_header">

        <AutoCompleteTextView
            android:id="@+id/meal_type_autocomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/diet_type_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_10"
        android:text="@string/diet_type"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meal_type_dropdown" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/diet_type_dropdown"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/diet_type"
        android:padding="@dimen/padding_10"
        app:layout_constraintTop_toBottomOf="@id/diet_type_header">

        <AutoCompleteTextView
            android:id="@+id/diet_autocomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/find_recipes_floating_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/search_icon_white"
        android:layout_margin="@dimen/margin_25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>